# calibration_test

./: CMakeLists.txt  README.md  info.txt  package.xml
data/: laser.txt  laser.xml
include/: Calibration.h  Equation.h  Frame.h  chess.h  getobj.h
src/: CalibData.cpp  CalibData.h  Calibration.cpp  Equation.cpp  Frame.cpp  calibration_test_node.cpp  camera_calibration.cpp  chess.cpp  chesstest.cpp  getobj.cpp  testpnp.cpp
testing_data/: laser (kopia).txt  laser.txt
testing_data (kopia)/: camera.txt  laser.txt
xml/: CamCalibConfig.xml  NOTinUSE.xml  SourceCalibIMGs.xml  camera_properties  laser.xml  out_camera_data.xml  validFramesIDs.xml
